--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -434,8 +434,12 @@
     La temperatura será tomada en grados Celcios (°C), la humedad en \%, el CO2 será analisado en ppm (partículas por millón), la iluminación en Luxers (Lx), la polución en micro-gramos por metros cúbicos (ug/m3) y las vibraciones en dB.
 
     Estos valores deben encontrarse en rangos determinados como se muestra en la siguiente tabla \ref{tab:variables_microclimaticas} según los autores Buys \& cols., Heras \& cols., Koob \& cols., Álvaro y Márquez.
+
+    Estos valores son definidos específicamente por el tipo de clima del país, y Cuba por ser un país cálido y húmedo en algunas regiones como es la ciudad de Santiago de Cuba donde se encuentra la colección objeto de estudio de este trabajo,
+    es importante realizar una valoración de los valores adecuados de estas variables ambientales por parte de los especialistas que puedan ser definidos en la propuesta y permitan mantener la colección en buen estado de conservación.
+    Vale destacar que los especialistas del Centro Prat Puig han manifestado que no tienen referencia que ninguna métrica o metodología por la cual se rigan para la toma de decisiones con respecto a las variables ambientales recomendadas para la conservación de los bienes culturales de la colección.
     
-    \begin{table}[h]
+    \begin{table}[H]
         \centering
         \caption{Variables microclimáticas recomendadas}
         \label{tab:variables_microclimaticas}
@@ -443,23 +447,26 @@
         \hline
         \rowcolor[HTML]{9698ED} 
         \multicolumn{1}{|c|}{\cellcolor[HTML]{9698ED}Variables} & \multicolumn{1}{c|}{\cellcolor[HTML]{9698ED}Valores Recomendados} & \multicolumn{1}{c|}{\cellcolor[HTML]{9698ED}Material}                                                   & \multicolumn{1}{c|}{\cellcolor[HTML]{9698ED}Autor}                                                                                                                                                                                                                                    \\ \hline
-        \multirow{-2}{*}{Temperatura}                                                        & 18 - 25°C                                                         & Vidrio y Cerámicos                                                                                      & \begin{tabular}[c]{@{}l@{}}Buys y cols. \cite{buysConservationRestorationCeramics2014}\\ Heras y cols. \cite{garciaherasInnovationGestionConservacion2015}\\ Koob y cols. \cite{koobConservationRestorationGlass2004}\end{tabular} \\ \cline{2-4} 
-                                                                & 10 - 25°C                                                         & Papel, Tela, Metal y Piedra                                                                             & Álvaro \cite{recioalvaroConservacionPreventivaExposiciones2020}                                                                                                                                                                                                      \\ \hline
-        \multirow{-2}{*}{Humedad}                               & 40 - 65\%                                                         & Vidrio y Cerámicos                                                                                      & \begin{tabular}[c]{@{}l@{}}Buys y cols. \cite{buysConservationRestorationCeramics2014}\\ Heras y cols. \cite{garciaherasInnovationGestionConservacion2015}\\ Koob y cols. \cite{koobConservationRestorationGlass2004}\end{tabular} \\ \cline{2-4} 
+                                                                & 18 - 25°C                                                         & Vidrio y Cerámicos                                                                                      & \begin{tabular}[c]{@{}l@{}}Buys y cols. \cite{buysConservationRestorationCeramics2014}\\ Heras y cols. \cite{garciaherasInnovationGestionConservacion2015}\\ Koob y cols. \cite{koobConservationRestorationGlass2004}\end{tabular} \\ \cline{2-4} 
+        \multirow{-3}{*}{Temperatura}                           & 18 - 22°C                                                         & Papel, Tela, Metal y Piedra                                                                             & Álvaro \cite{recioalvaroConservacionPreventivaExposiciones2020}                                                                                                                                                                                                      \\ \cline{2-4} 
+                                                                & 18 - 22°C                                                         & Madera, Pinturas.                                                                                       & \begin{tabular}[c]{@{}l@{}}Márquez \cite{marquezAgentesDeterioroMedioambientales2016}\\ Arévalo \cite{arevaloleonDegradacionArteColonial2018}\end{tabular}                                                                                          \\ \hline
+                                                                & 40 - 65\%                                                         & Vidrio y Cerámicos                                                                                      & \begin{tabular}[c]{@{}l@{}}Buys y cols. \cite{buysConservationRestorationCeramics2014}\\ Heras y cols. \cite{garciaherasInnovationGestionConservacion2015}\\ Koob y cols. \cite{koobConservationRestorationGlass2004}\end{tabular} \\ \cline{2-4} 
+        \multirow{-4}{*}{Humedad}                               & 40 - 60\%                                                         & \begin{tabular}[c]{@{}l@{}}Tela, Tapices, Grabados,\\ Papel.\end{tabular}                               & Arévalo \cite{arevaloleonDegradacionArteColonial2018}                                                                                                                                                                                                                \\ \cline{2-4} 
+                                                                & 45 - 65\%                                                         & Madera, Papel, Tela                                                                                     & Márquez \cite{marquezAgentesDeterioroMedioambientales2016}                                                                                                                                                                                                           \\ \cline{2-4} 
                                                                 & 30 - 50\%                                                         & Papel, Tela, Metal y Piedra                                                                             & Álvaro \cite{recioalvaroConservacionPreventivaExposiciones2020}                                                                                                                                                                                                      \\ \hline
         CO2                                                     & 400 - 800ppm                                                      & Papel y Tela                                                                                            & \begin{tabular}[c]{@{}l@{}}Márquez \cite{marquezAgentesDeterioroMedioambientales2016}\\ Calvo \cite{calvomanuelConservacionRestauracionPintura2002}\end{tabular}                                                                                    \\ \hline
-                                                                & 300Lx                                                             & \begin{tabular}[c]{@{}l@{}}Piedra, Metal, Cerámica,\\ Vidrio.\end{tabular}                              & Márquez \cite{marquezAgentesDeterioroMedioambientales2016}                                                                                                                                                                                                                            \\ \cline{2-3}
+                                                                & 300Lx                                                             & \begin{tabular}[c]{@{}l@{}}Piedra, Metal, Cerámica,\\ Vidrio.\end{tabular}                              &                                                                                                                                                                                                                                                                                       \\ \cline{2-3}
         \multirow{-4}{*}{Iluminación}                           & 150Lx                                                             & \begin{tabular}[c]{@{}l@{}}Pinturas al temple, al óleo, \\ sobre lienzo,\\ Madera, Marfil.\end{tabular} &                                                                                                                                                                                                                                                                                       \\ \cline{2-3}
-                                                                & 50Lx                                                              & \begin{tabular}[c]{@{}l@{}}Papel, Tejidos, Tapices,\\ Pieles.\end{tabular}                              &                                                                                                                                                                                          \\ \cline{2-4} 
+                                                                & 50Lx                                                              & \begin{tabular}[c]{@{}l@{}}Papel, Tejidos, Tapices,\\ Pieles.\end{tabular}                              & \multirow{-3}{*}{Márquez \cite{marquezAgentesDeterioroMedioambientales2016}}                                                                                                                                                                                         \\ \cline{2-4} 
                                                                 & 50 - 250Lx                                                        & Vidrio y Cerámicos                                                                                      & \begin{tabular}[c]{@{}l@{}}Buys y cols. \cite{buysConservationRestorationCeramics2014}\\ Heras y cols. \cite{garciaherasInnovationGestionConservacion2015}\\ Koob y cols. \cite{koobConservationRestorationGlass2004}\end{tabular} \\ \hline
         Polución                                                & 20-100 ug/m3                                                      & \begin{tabular}[c]{@{}l@{}}Pinturas, Textiles,\\ Cueros, Metales.\end{tabular}                          & Tapol \cite{tapolComoAfrontarPolucion2001}                                                                                                                                                                                                                           \\ \hline
         Vibraciones                                             & 70 - 75dB                                                         & \begin{tabular}[c]{@{}l@{}}Objetos en pedestales\\ y vitrinas\end{tabular}                              & William y cols. \cite{weiDesignVibrationDamping2011}                                                                                                                                                                                                                 \\ \hline
         \end{tabular}
     \end{table}
 
-    Estos valores son definidos específicamente por el tipo de clima del país, y Cuba por ser un país cálido y húmedo en algunas regiones como es la ciudad de Santiago de Cuba donde se encuentra la colección objeto de estudio de este trabajo,
-    es importante realizar una valoración de los valores adecuados de estas variables ambientales por parte de los especialistas que puedan ser definidos en la propuesta y permitan mantener la colección en buen estado de conservación.
-    Vale destacar que los especialistas del Centro Prat Puig han manifestado que no tienen referencia que ninguna métrica o metodología por la cual se rigan para la toma de decisiones con respecto a las variables ambientales recomendadas para la conservación de los bienes culturales de la colección.
+    \textbf{¿Qué ocurre si estos valores no se encuentran en el rango de lo recomendado?}\\
+
+    ...
 
     \section{Condiciones que favorecen el ataque de insectos xilófagos}
 
