--- a/ref.bib
+++ b/ref.bib
@@ -876,3 +876,10 @@ Internet of things CISCO
 	author = {Wei, William and Krumperman, Netta and Delissen, Nicole},
 	year = {2011}
 }
+
+@article{arevaloleonDegradacionArteColonial2018,
+	title = {Degradación del arte colonial religioso por mala iluminación de la {Iglesis} de {San} {Sebastián} de la ciudad de {Cuenca}},
+	author = {Arévalo León, Edisson Paúl},
+	year = {2018},
+	note = {Publisher: Universidad Católica de Cuenca.}
+}
