--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -464,9 +464,58 @@
         \end{tabular}
     \end{table}
 
-    \textbf{¿Qué ocurre si estos valores no se encuentran en el rango de lo recomendado?}\\
+    \subsection{Principales afectaciones}
+
+    \textbf{¿Qué ocurre si los valores microclimáticos no se encuentran en el rango de lo recomendado?}
+
+    Analicemos por variable microclimática la afectación que trae consigo esta variación en ciertos materiales según los autores.\\
+
+    \textbf{Temperatura}
+
+    Según Márquez \cite{marquezAgentesDeterioroMedioambientales2016} una temperatura elevada favorece la velocidad de los procesos químicos, con esto un aumento de 10°C duplica la velocidad de los procesos reproductores del moho y favorece  el desarrollo del biodeterioro en presencia de altas HR (plagas), además de que provoca la evaporación del agua de composición de los materiales dando lugar a la sequedad y deshidratación de los mismos, que originan su degradación.
+
+    Mientras que Álvaro \cite{recioalvaroConservacionPreventivaExposiciones2020} plantea que una temperatura contraindicada (demasiado alta, demasiado baja o fluctuaciones) provoca alteraciones de los colores y desintegración progresiva de los materiales orgánicos, especialmente si son químicamente inestables como el papel ácido, fotografías en colores, entre otros, así como el agrietamiento de pinturas y otros polímeros a causa de la frialdad.
+
+    En el caso de Gómez \cite{gomezcarreteroEfectosAcidoNitrico2015a} plantea que la temperatura es un factor de envejecimiento del óleo. Actúa de modo semejante y en combinación con la luz, y produce cambios de humedad relativa al aumentar o disminuir la temperatura ambiental.\\
+
+    \textbf{Humedad}
+
+    La humedad excesiva constante superior al 75\% puede provocar: debilitación de adhesivos, pudrimiento de colas, aumento del tamaño de los materiales (madera, papel, tela, etc.), manchas (papel, tela, vitela, etc.), corrimiento de tintas, enmohecimiento de cueros, aumento de la corrosión de los diferentes metales, adherencia de hojas de papel, ablandamiento de materias, aparición de sales, opacidad de vidrios, entre otras. Al igual que la sequedad excesiva constante inferior al 35\% puede producir: fragilidad y desecación de los componentes de las obras, deterioro en maderas y marqueterías por contracción, tensión de las telas, reducción dimensional de materiales, entre otras.\cite{marquezAgentesDeterioroMedioambientales2016}
+
+    \newpage
+
+    Del mismo modo que el cambio brusco en estos niveles de humedad puede provocar:
+    \begin{itemize}
+        \item Alteración de los colores y desintegración gradual de materiales orgánicos, especialmente de aquellos químicamente inestables como el papel ácido.
+        \item Aparición de moho en materiales orgánicos e inorgánicos; corrosión en metales y encogimiento en textiles.
+        \item Procesos de hidratación o deshidratación de ciertos minerales y corrosión de los metales que contengan sales.
+        \item Procesos de contracción, dilatación, compresión y agrietamiento de los materiales orgánicos en función del efecto de las fuerzas.
+    \end{itemize}
+    Tomado de Álvaro \cite{recioalvaroConservacionPreventivaExposiciones2020}.\vspace{0.5cm}
+
+    Así mismo Gómez \cite{gomezcarreteroEfectosAcidoNitrico2015a} plantea que si la humedad relativa se incrementa y el agua se condensa en la superficie de los objetos, los materiales sensibles a la humedad aumentan de volumen. Entre estos materiales se hallan los tejidos, el papel y la madera. Cuando la humedad relativa desciende, estos objetos se contraen. Los fenómenos de contracción y dilatación producen grietas y deformaciones.\\
+
+    \textbf{CO2}
+
+    Según Calvo \cite{calvomanuelConservacionRestauracionPintura2002} el CO2 combinado con agua produce el ácido carbónico, que afecta a los materiales orgánicos y produce corrosión en los materiales pétreos y el vidrio.
+
+    Las reacciones de fotooxidación son inevitables y hacen que las capas pictóricas pierdan sus propiedades.\cite{gomezcarreteroEfectosAcidoNitrico2015a}\\
+
+    \textbf{Iluminación}
+
+    La iluminación es un importante factor de deterioro ya que tanto la luz visible como las radiaciones UV activan la formación de radicales libres en los enlaces múltiples de las cadenas insaturadas de los aceites secantes que aglutinan la pintura al óleo.\cite{gomezcarreteroEfectosAcidoNitrico2015a}
+
+    Según Márquez \cite{marquezAgentesDeterioroMedioambientales2016} en el papel la luz provoca decoloración, cambio de color (tono amarillo) y rotura de enlaces químicos, dando lugar a su envejecimiento prematuro, que lo vuelve quebradizo, produciendo el debilitamiento de su estructura, también las pinturas a la acuarela se ven afectadas por la decoloración de la materia pictórica y los efectos de la luz sobre el papel y en los tejidos, la luz produce rotura y debilitamiento de la materia por fragmentación de sus enlaces químicos.\\
+
+    \textbf{Polución}
+
+    En el caso de los efectos negativos de la polución sobre los metales, y más concretamente el plomo, la plata y el bronce, provocando pérdida de brillo, picaduras, manchas, cambios de color, eflorescencias, entre otras.
+    De la misma manera que las pinturas y los papeles amarillean y se debilitan, los textiles pierden resistencia mecánica, los colorantes cambian de tonalidad, las gomas se cuartean y los cueros cobran un aspecto polvoriento.\cite{tapolComoAfrontarPolucion2001}\\
+
+    \textbf{Vibraciones}
 
     ...
+
 
     \section{Condiciones que favorecen el ataque de insectos xilófagos}
 
@@ -488,9 +537,7 @@
 
     Por otra parte Flores y Pérez \cite{floresDurabilidadNaturalDiez1987a}, en un estudio sobre los hongos xilófagos plantean que el rango de temperatura idónea para la reproducción de estos xilófagos se encuentra entre los 20°C y los 30°C, existiendo también el caso de que aún con 38°C exista la posibilidad de reproducción en algunas especies, así como Avalos Díaz y cols. \cite{avalosdiazInfluenciaDosHongos2020} que en una de sus publicaciones se define que la temperatura idónea para el surgimiento de colonias xilófagas es de 27°C +- 1.\\ 
 
-    %\section{Sistema de control de población}\label{sec: sistemaPoblacion}
-    %Sensores PIR\\
-
+    \newpage
     \addcontentsline{toc}{section}{Conclusiones}
     \textbf{\large Conclusiones parciales}
 
