--- a/capitulos/introduccion.tex
+++ b/capitulos/introduccion.tex
@@ -64,7 +64,7 @@
 
     El presente trabajo investigativo está compuesto por una introducción general, dos capítulos con sus introducciones y conclusiones parciales, conclusiones generales, recomendaciones, apéndices y bibliografías.
 
-    En el capítulo 1 se abordan los antecedentes de la aplicación del Internet de las Cosas en los museos a nivel internacional así como la situación del IoT en los museos de nuestro País, analisis de las arquitecturas de IoT y sus principales capas, la proposición de una para el proyecto y la caracterización de sus capas, así como las condiciones medioambientales factibles para la aparición de insectos y su prevención.
+    En el capítulo 1 se abordan los antecedentes de la aplicación del Internet de las Cosas en los museos a nivel internacional así como la situación del IoT en los museos de nuestro País, analisis de las arquitecturas de IoT y sus principales capas, la proposición de una para el proyecto y la caracterización de sus capas, así como el análisis de las variables microclimáticas recomendadas por los autores y las principales afectaciones, además del estudios de las condiciones medioambientales factibles para la aparición de insectos y su prevención.
 
     En el capítulo 2 se trata lo relacionado al diseño y la implementación del Sistema de Supervisión y Monitoreo de las piezas de arte en el museo de la muestra pertenecientes a la Colección de Arte y Arqueología Francisco Prat Puig, se analiza la selección de la instrumentación en base al ahorro de energía y de recursos, creando las condiciones mínimas indispensables para el montaje del proyecto de automatización ajustado a las características de instalación seleccionadas.
     
