--- a/ref.bib
+++ b/ref.bib
@@ -883,3 +883,10 @@ Internet of things CISCO
 	year = {2018},
 	note = {Publisher: Universidad Católica de Cuenca.}
 }
+
+@article{gomezcarreteroEfectosAcidoNitrico2015a,
+	title = {Efectos del ácido nítrico en la variación del color de pigmentos de uso común en obras de arte pictóricas},
+	journal = {Proyecto de investigación:},
+	author = {Gómez Carretero, María Victoria},
+	year = {2015}
+}
