--- a/capitulos/listado.tex
+++ b/capitulos/listado.tex
@@ -18,6 +18,10 @@
     \newline
     \textbf{PIR} - Passive Infrared Sensor
     \newline
+    \textbf{PPB} - Partículas Por Billón
+    \newline
+    \textbf{PPM} - Partículas Por Millón
+    \newline
     \textbf{RFID} - Radio Frequency Identification
     \newline
     \textbf{SN} - Sensor Network (Rede de Sensores)
