--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -468,7 +468,7 @@
 
     \textbf{¿Qué ocurre si los valores microclimáticos no se encuentran en el rango de lo recomendado?}
 
-    Analicemos por variable microclimática la afectación que trae consigo esta variación en ciertos materiales según los autores.\\
+    Analicemos por variable microclimática la afectación que trae consigo esta variación en ciertos materiales según los autores.
 
     \textbf{Temperatura}
 
@@ -476,7 +476,7 @@
 
     Mientras que Álvaro \cite{recioalvaroConservacionPreventivaExposiciones2020} plantea que una temperatura contraindicada (demasiado alta, demasiado baja o fluctuaciones) provoca alteraciones de los colores y desintegración progresiva de los materiales orgánicos, especialmente si son químicamente inestables como el papel ácido, fotografías en colores, entre otros, así como el agrietamiento de pinturas y otros polímeros a causa de la frialdad.
 
-    En el caso de Gómez \cite{gomezcarreteroEfectosAcidoNitrico2015a} plantea que la temperatura es un factor de envejecimiento del óleo. Actúa de modo semejante y en combinación con la luz, y produce cambios de humedad relativa al aumentar o disminuir la temperatura ambiental.\\
+    En el caso de Gómez \cite{gomezcarreteroEfectosAcidoNitrico2015a} plantea que la temperatura es un factor de envejecimiento del óleo. Actúa de modo semejante y en combinación con la luz, y produce cambios de humedad relativa al aumentar o disminuir la temperatura ambiental.
 
     \textbf{Humedad}
 
@@ -493,26 +493,28 @@
     \end{itemize}
     Tomado de Álvaro \cite{recioalvaroConservacionPreventivaExposiciones2020}.\vspace{0.5cm}
 
-    Así mismo Gómez \cite{gomezcarreteroEfectosAcidoNitrico2015a} plantea que si la humedad relativa se incrementa y el agua se condensa en la superficie de los objetos, los materiales sensibles a la humedad aumentan de volumen. Entre estos materiales se hallan los tejidos, el papel y la madera. Cuando la humedad relativa desciende, estos objetos se contraen. Los fenómenos de contracción y dilatación producen grietas y deformaciones.\\
+    Así mismo Gómez \cite{gomezcarreteroEfectosAcidoNitrico2015a} plantea que si la humedad relativa se incrementa y el agua se condensa en la superficie de los objetos, los materiales sensibles a la humedad aumentan de volumen. Entre estos materiales se hallan los tejidos, el papel y la madera. Cuando la humedad relativa desciende, estos objetos se contraen. Los fenómenos de contracción y dilatación producen grietas y deformaciones.
 
     \textbf{CO2}
 
     Según Calvo \cite{calvomanuelConservacionRestauracionPintura2002} el CO2 combinado con agua produce el ácido carbónico, que afecta a los materiales orgánicos y produce corrosión en los materiales pétreos y el vidrio.
 
-    Las reacciones de fotooxidación son inevitables y hacen que las capas pictóricas pierdan sus propiedades.\cite{gomezcarreteroEfectosAcidoNitrico2015a}\\
+    Las reacciones de fotooxidación son inevitables y hacen que las capas pictóricas pierdan sus propiedades.\cite{gomezcarreteroEfectosAcidoNitrico2015a}
 
     \textbf{Iluminación}
 
     La iluminación es un importante factor de deterioro ya que tanto la luz visible como las radiaciones UV activan la formación de radicales libres en los enlaces múltiples de las cadenas insaturadas de los aceites secantes que aglutinan la pintura al óleo.\cite{gomezcarreteroEfectosAcidoNitrico2015a}
 
-    Según Márquez \cite{marquezAgentesDeterioroMedioambientales2016} en el papel la luz provoca decoloración, cambio de color (tono amarillo) y rotura de enlaces químicos, dando lugar a su envejecimiento prematuro, que lo vuelve quebradizo, produciendo el debilitamiento de su estructura, también las pinturas a la acuarela se ven afectadas por la decoloración de la materia pictórica y los efectos de la luz sobre el papel y en los tejidos, la luz produce rotura y debilitamiento de la materia por fragmentación de sus enlaces químicos.\\
+    Según Márquez \cite{marquezAgentesDeterioroMedioambientales2016} en el papel la luz provoca decoloración, cambio de color (tono amarillo) y rotura de enlaces químicos, dando lugar a su envejecimiento prematuro, que lo vuelve quebradizo, produciendo el debilitamiento de su estructura, también las pinturas a la acuarela se ven afectadas por la decoloración de la materia pictórica y los efectos de la luz sobre el papel y en los tejidos, la luz produce rotura y debilitamiento de la materia por fragmentación de sus enlaces químicos.
 
     \textbf{Polución}
 
     En el caso de los efectos negativos de la polución sobre los metales, y más concretamente el plomo, la plata y el bronce, provocando pérdida de brillo, picaduras, manchas, cambios de color, eflorescencias, entre otras.
-    De la misma manera que las pinturas y los papeles amarillean y se debilitan, los textiles pierden resistencia mecánica, los colorantes cambian de tonalidad, las gomas se cuartean y los cueros cobran un aspecto polvoriento.\cite{tapolComoAfrontarPolucion2001}\\
+    De la misma manera que las pinturas y los papeles amarillean y se debilitan, los textiles pierden resistencia mecánica, los colorantes cambian de tonalidad, las gomas se cuartean y los cueros cobran un aspecto polvoriento.\cite{tapolComoAfrontarPolucion2001}
 
     \textbf{Vibraciones}
+
+    Según Sánchez \cite{sanchezPinturaSobreTabla2015} las vibraciones producen efectos acumulativos que traen consigo la degeneración, el envejecimiento y fatiga de los componentes, esto uniéndose a la edad en el caso de las pinturas.
 
     ....
 
