--- a/ref.bib
+++ b/ref.bib
@@ -890,3 +890,14 @@ Internet of things CISCO
 	author = {Gómez Carretero, María Victoria},
 	year = {2015}
 }
+
+
+@article{sanchezPinturaSobreTabla2015,
+	title = {Pintura sobre tabla y escultura policromada: problemática de las obras con soporte de madera durante el proceso de renovación del {Museo} {Arqueológico} {Nacional}},
+	volume = {33},
+	shorttitle = {Pintura sobre tabla y escultura policromada},
+	journal = {Boletín del Museo Arqueológico Nacional},
+	author = {Sánchez, Eva Santos},
+	year = {2015},
+	pages = {173--185}
+}
