--- a/ref.bib
+++ b/ref.bib
@@ -901,3 +901,21 @@ Internet of things CISCO
 	year = {2015},
 	pages = {173--185}
 }
+
+@book{ortizRestauracionObrasArte2012,
+	title = {Restauración de obras de arte: pintura de caballete},
+	volume = {11},
+	shorttitle = {Restauración de obras de arte},
+	publisher = {Ediciones AKAL},
+	author = {Ortiz, Alicia Sánchez},
+	year = {2012}
+}
+
+@article{ferrerasromeroVirgenConNino2011,
+	title = {Virgen con el Niño, San Sebastián y San Roque, obra de Bernardino Luini: investigación e intervención},
+	shorttitle = {Virgen con el Niño, San Sebastián y San Roque, obra de Bernardino Luini},
+	journal = {PH: Boletín del Instituto Andaluz del Patrimonio Histórico, 80, 72-89.},
+	author = {Ferreras Romero, Gabriel and Magdaleno Granja, Rocío and Gómez Morón},
+	year = {2011},
+	note = {Publisher: Junta de Andalucía: Instituto Andaluz del Patrimonio Histórico}
+}
